--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --solid-dark-blue: #1B347C;
   --solid-gray: rgba(22, 36, 82, 0.4);
   --neutral-white: #FFFFFF;
+  --neutral-gray: #B3B3B3;
+  --neutral-red: #FF4D4F;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
